--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -43,8 +43,8 @@
 Concepts which I learned and implemented are :- Data Types , Variables , Loops , Conditional Satatements , Functions ,
 JSON , DOM Manipulation , Classes , JS Objects , OOPs , Event Handling , HTML Canvas.
                 </p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-4" href="">Get Code</a>
-                        <a class="btn btn-md btn-primary display-4" href="">My LinkedIn Profile</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-4" href="https://github.com/iamriteshh/snakeGame">Get Code</a>
+                        <a class="btn btn-md btn-primary display-4" href="linkedin.com/in/iiamritesh/">My LinkedIn Profile</a></div>
             </div>
         </div>
     </div>
@@ -132,8 +132,8 @@ JSON , DOM Manipulation , Classes , JS Objects , OOPs , Event Handling , HTML Ca
         </div>
 
         <div class="media-container-row pt-5">
-            <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.co">Get Code Of Snake Game</a>
-                <a class="btn btn-secondary display-4" href="https://mobirise.co">My Linkedin Profile</a></div>
+            <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://github.com/iamriteshh/snakeGame">Get Code Of Snake Game</a>
+                <a class="btn btn-secondary display-4" href="linkedin.com/in/iiamritesh/">My Linkedin Profile</a></div>
         </div>
     </div>
 </section>
