--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -44,7 +44,7 @@ Concepts which I learned and implemented are :- Data Types , Variables , Loops ,
 JSON , DOM Manipulation , Classes , JS Objects , OOPs , Event Handling , HTML Canvas.
                 </p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-4" href="https://github.com/iamriteshh/snakeGame">Get Code</a>
-                        <a class="btn btn-md btn-primary display-4" href="linkedin.com/in/iiamritesh/">My LinkedIn Profile</a></div>
+                        <a class="btn btn-md btn-primary display-4" href="https://www.linkedin.com/in/iiamritesh/">My LinkedIn Profile</a></div>
             </div>
         </div>
     </div>
@@ -133,7 +133,7 @@ JSON , DOM Manipulation , Classes , JS Objects , OOPs , Event Handling , HTML Ca
 
         <div class="media-container-row pt-5">
             <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://github.com/iamriteshh/snakeGame">Get Code Of Snake Game</a>
-                <a class="btn btn-secondary display-4" href="linkedin.com/in/iiamritesh/">My Linkedin Profile</a></div>
+                <a class="btn btn-secondary display-4" href="https://www.linkedin.com/in/iiamritesh/">My Linkedin Profile</a></div>
         </div>
     </div>
 </section>
